<resources>
    <!-- SGGuppies Server info START-->
    <string name="server_ip_address">172.21.148.167</string>
    <!-- SGGuppies Server info END-->

    <string name="app_name">SGGuppies</string>
    <string name="tab_text_1">Map</string>
    <string name="tab_text_3">Respond</string>
    <string name="tab_text_2">Request</string>

    <!-- Placeholder for dynamic text -->
    <string name="placeholder">Placeholder for dynamic text</string>

    <!-- Map Fragment Strings -->
    <string name="more_detail">More Details</string>
    <string name="navigate">Navigate</string>
    <string name="Today">Today:</string>
    <string name="aed_at">1 AED(s) at</string>
    <string name="aed_image">AED Image</string>

    <!-- Activity AED Details -->
    <string name="building">Building</string>
    <string name="location">Location</string>
    <string name="operating_hour">Operating Hour</string>
    <string name="aed_disclaimer">Disclaimer: Access to the AED is subject to the operating hour of the premises.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="status">Status</string>
    <string name="report">Report Faulty AED</string>
    <string name="avail">Set AED Available</string>
    <string name="unavail">Set AED Unavailable</string>

    <!-- Request Fragment Strings -->
    <string name="sos">SOS</string>
    <string name="help_sos">HELP SOS</string>

    <!-- Respond Fragment Strings -->
    <string name="respond_info">Accepting a request will navigate you to that location.</string>
    <string-array name="HelpReq">
        <item>Man Dying at YunanGarden</item>
        <item>Cardiac Arrest at SouthSpine</item>
        <item>Terrorist Attack at SCSE</item>
    </string-array>
    <string-array name="TypeofSOS">
        <item>Heartattack</item>
        <item>Robbery</item>
        <item> </item>
    </string-array>
    <string name="title_activity_login">login</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string-array name="emergencytypes">
        <item>Collapse</item>
        <item>Crime</item>
        <item>Injury</item>
</string-array>
</resources>
